compiler/tests/success/x86-64/calldepth.jazz
fn f () -> reg u64 {
  reg u64 res;
  res = 0;
  return res;
}

/* conditional call */

#[calldepth=2]
export fn g (reg u64 x) -> reg u64 {
  reg u64 res;

  if (x == 0) {
    res = 0;
  } else {
    res = f ();
  }

  return res;
}
