compiler/tests/fail/annotation/x86-64/calldepth.jazz
/* no call: max call depth is 1 */

#[calldepth=2]
export fn f () -> reg u64 {
  reg u64 res;
  res = 0;
  return res;
}
